# qMLX

./: .gitignore  0.10-TODO.md  0.11-TODO.md  0.8TODO.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile  NOTICE  README.md  ROADMAP.md  SECURITY.md  gsm8k_qwen3_0.6b_results.json  index.html  install.sh  mise.toml  pyproject.toml  reap-models.html  specdecoding.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  performance_issue.yml
.github/workflows/: ci.yml  pr-validate.yml  spam-issue-guard.yml
bench/: bench_fused_mlp.py  bench_mtp_accept_k3.py  bench_mtp_k3.py  bench_mx_compile.py  bench_spec_decode_dflash.py  bench_spec_decode_mtp.py  bench_verify_qmv.py
community-benchmarks/: aggregated.json
community-benchmarks/submissions/: 20260709-apple-m2-max-gpt-oss-20b-mxfp4-q8-92592822946c.json  20260709-apple-m2-max-qwen3-5-9b-4bit-426cc891c0a3.json  20260709-apple-m2-max-qwen3-6-35b-4bit-030c4de4afdb.json  20260709-apple-m2-max-qwen3-6-35b-4bit-96c1152b8cfe.json
docs/: CNAME  architecture.md  index.md  inference-efficiency-papers-2025.md  suffix_decoding_eligibility.md  tape-rollback-status.md
docs/assets/: demo.cast
docs/benchmarks/: README.md  audio.md  image.md  llm.md  video.md
docs/development/: architecture.md  contributing.md  pr_merge_sop.md  releasing.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: ai-clients.md  audio.md  codex-cli.md  continuous-batching.md  embeddings.md  mcp-tools.md  multimodal.md  python-api.md  reasoning.md  sdk-compat.md  server.md  tool-calling.md
docs/plans/: telemetry-golden-profile.md
docs/reference/: cli.md  configuration.md  models.md
evals/: README.md  SCORECARD.md  TOOL_CALLING_TESTS.md  generate_scorecard.py  run_eval.py
evals/prompts/: coding.json  general.json  reasoning.json  tool_calling.json
evals/results/: gpt-oss-20b-mxfp4-q8.json  minimax-m2.5-4bit.json  qwen3-0.6b-4bit.json  qwen3-coder-next-4bit.json  qwen3-coder-next-6bit.json  qwen3.5-122b-a10b-8bit.json  qwen3.5-122b-a10b-mxfp4.json  qwen3.5-35b-a3b-4bit.json  qwen3.5-35b-a3b-8bit.json
examples/: audio_separation_example.py  benchmark_all_models.py  benchmark_audio.py  benchmark_detokenizer.py  closed_captions.py  mcp_chat.py  mcp_tool_use.py  mic_live.py  mic_realtime.py  mic_transcribe.py  test_batch_sync.py  test_batching.py  tts_example.py  tts_multilingual.py
harness/: README.md
harness/baselines/: full-qwen3.5-35b-8bit.json  full-qwen3.6-35b-4bit.json
harness/scorecard/: latest.md
scripts/: agent_discovery.py  agent_promo_gen.py  agent_soak_test.py  agent_test_gen.py  audit_tool_parser_coverage.py  autoresearch_bench.py  bench_all_models.sh  bench_attention.py  bench_cache_perf.py  bench_decode_tps.py  bench_detok.py  bench_dflash.py  bench_diffusion_gemma.py  bench_engine_parity.py  bench_engine_solo.py  bench_kv_cache.py  bench_readme_refresh.py  bench_snapshot.py  bench_suffix_decoding_integrated.py  bench_vs_ollama.py  benchmark_engines.py  benchmark_realworld.py  build-sidecar.sh  check_gha_pinning.py  demo_dflash.py  demo_dflash.tape  demo_race.py  dev_test.py  extract_mtp_weights.py  gemma4_mtp_mvp_smoke.sh  golden_models.yaml  local_bench_vs_ollama.py  microbench_parsers.py  mirror_to_r2.py  release_check_m3.sh  release_check_m3_random.py  release_smoke.py  repro_r12_atomicity.py  run_dogfood_mvp.sh  sidecar-entitlements.plist  (+4 more)
scripts/pr_validate/: _test_env.py  golden_models.yaml  pr_validate.py
tests/: conftest.py  regression_suite.py  test_alias_hybrid_classification.py  test_aliases_contract.py  test_anthropic_stream_finalize.py  test_anthropic_think_leak_r12_m1b.py  test_anthropic_tool_usage_d.py  test_api_models.py  test_api_validation_bundle.py  test_audio_alias_registry.py  test_audio_boot_check.py  test_audio_extras_lockin.py  test_audio_probe_consistency.py  test_audio_r11_b_bundle.py  test_audio_r7_c_bundle.py  test_audio_r8_a_bundle.py  test_audio_route_registration_gate.py  test_audio_routes_bundle.py  test_bench_tier_all.py  test_bench_tier_harness.py  test_bench_tier_smoke.py  test_bench_tier_submit_combo.py  test_bench_vs_ollama.py  test_body_receive_timeout.py  test_cache_routes.py  test_cancelled_requests_metric.py  test_casual_chat_auto_disable_thinking.py  test_chat_route_tool_tag_leak.py  test_clean_error_messages.py  test_cli_argcomplete.py  test_cli_bench.py  test_cli_chat.py  test_cli_embeddings_extra.py  test_cli_info.py  test_cli_jlens.py  test_cli_models.py  test_cloud_router.py  test_codex_profile.py  test_community_bench.py  test_completions_log_redaction.py  (+172 more)
tests/integrations/: README.md  conftest.py  test_agents_matrix.py  test_aider.sh  test_anthropic_sdk.py  test_frameworks_matrix.py  test_hermes.py  test_hy3_offline.py  test_langchain.py  test_librechat_docker.py  test_openhands.sh  test_openwebui.py  test_pydantic_ai_full.py  test_smolagents_full.py
tests/parsers/: dispatch.py  streaming_reconstructor.py  test_infra_smoke.py
vllm_mlx/: __init__.py  _completion.py  _download_gate.py  _log_namespace.py  _mirror.py  _mlx_compat.py  _mxfp4_moe_guardrail.py  _parent_watchdog.py  _seeded_sampler.py  _signal_observability.py  _tempfile_safe.py  _version_check.py  aliases.json  benchmark.py  cli.py  embedding.py  engine_core.py  gradio_app.py  honest_metrics.py  jlens.py  kv_cache_dtype.py  memory_cache.py  mllm_batch_generator.py  mllm_scheduler.py  model_aliases.py  model_auto_config.py  model_registry.py  optimizations.py  output_collector.py  paged_cache.py  pflash.py  pflash_v2.py  prefill_frequency_dashboard.py  prefill_profiler.py  prefix_cache.py  request.py  scheduler.py  server.py  server_v2.py  turboquant.py  (+1 more)
vllm_mlx/_integration_tests/: __init__.py
vllm_mlx/agents/: __init__.py  adapter.py  base.py  testing.py
vllm_mlx/api/: __init__.py  anthropic_adapter.py  anthropic_models.py  constants.py  guided.py  models.py  response_format_metrics.py  responses_adapter.py  responses_models.py  strict_json_schema.py  tool_calling.py  utils.py
vllm_mlx/audio/: __init__.py  probe.py  registry.py  (+3 more)
(+144 files in other folders)
